[feat] 관리자 권한 관리 - 그룹별 메뉴 권한 매핑 추가